playground/notas_tests/valid/r1-03.hulk
let a=2, b=3 in let c=5 in let _ = (let a=3 in print(a+b)) in print(a);
