playground/notas_tests/invalid/r1-06.hulk
let a=2, b=3 in let c=5 in (let a=3 in print(a+b)), print(a);
